--- a/src/style.css
+++ b/src/style.css
@@ -48,3 +48,15 @@ p#result{
   font-size: 80px;
   color: #fffba8;
 }
+
+@media (max-width: 768px){
+  #binaryValue{
+    width: 15rem;
+  }
+  h1{
+    font-size: 40px;
+  }
+  p{
+    font-size: 16px;
+  }
+}
